--- a/templates/card_not_avaliable.html
+++ b/templates/card_not_avaliable.html
@@ -36,7 +36,7 @@
 						<div class="card-short-desc">Корм для щенков с с высоким содержанием животного протеина и малым количеством углеводов.</div>
 						<div class="mb36">
 							<div class="related-suggest-cont">
-								<a href="#layer-remind" class="btn btn-block fancybox">Сообщить о поступлении</a>
+								<a href="#layer-remind" class="btn btn_block fancybox">Сообщить о поступлении</a>
 								<div class="related-suggest s-scroll" data-scroll="related">Мы нашли похожие<br/>товары!</div>
 							</div>	
 							<div class="related-date">
@@ -77,7 +77,7 @@
 			<input type="text" class="def-input" placeholder="" id="f205"/>
 			<div class="label"><label for="f105">По SMS:</label></div>
 			<input type="tel" class="def-input phone-mask" placeholder="+7" id="f105"/>
-			<div class="sub-cont"><input type="submit" class="btn btn-block" value="Сообщить"/></div>
+			<div class="sub-cont"><input type="submit" class="btn btn_block" value="Сообщить"/></div>
 		</form>
 	</div>
 </div>
