--- a/templates/includes/_card_layers.html
+++ b/templates/includes/_card_layers.html
@@ -7,7 +7,7 @@
             <input type="tel" class="def-input phone-mask" placeholder="+7" id="f100"/>
             <div class="label"><label for="f200">Имя*:</label></div>
             <input type="text" class="def-input" placeholder="" id="f200"/>
-            <div class="sub-cont"><input type="submit" class="btn btn-block" value="Ожидаю звонок"/></div>
+            <div class="sub-cont"><input type="submit" class="btn btn_block" value="Ожидаю звонок"/></div>
         </form>
     </div>
 </div>
@@ -34,7 +34,7 @@
                     <div class="fav-list-item-count">7 товаров</div>
                 </div>
             </div>
-            <div class="sub-cont"><input type="submit" class="btn btn-block" value="Сохранить"/></div>
+            <div class="sub-cont"><input type="submit" class="btn btn_block" value="Сохранить"/></div>
         </form>
     </div>
 </div>
