--- a/templates/includes/_log_reg_layers.html
+++ b/templates/includes/_log_reg_layers.html
@@ -33,8 +33,8 @@
             </label>
             
             <div class="sub-cont mb25">
-                <!-- <input type="submit" class="btn btn-block" value="Зарегистрироваться"/> -->
-                <a href="#layer-message" class="fancybox btn btn-block">Зарегистрироваться</a>
+                <!-- <input type="submit" class="btn btn_block" value="Зарегистрироваться"/> -->
+                <a href="#layer-message" class="fancybox btn btn_block">Зарегистрироваться</a>
             </div>
             <div class="fs11 lh13 mb10">Нажимая на кнопку «Зарегистрироваться», вы согласны с <a href="">«Условиями продажи»</a>.</div>
         </form>
@@ -72,7 +72,7 @@
                 <input type="checkbox" id="rem"/><i></i>Запомнить меня
             </label>
             
-            <div class="sub-cont mb10"><input type="submit" class="btn btn-block" value="Войти"/></div>
+            <div class="sub-cont mb10"><input type="submit" class="btn btn_block" value="Войти"/></div>
             <div><a href="#layer-forgetpass" class="fancybox fs11">Забыли пароль?</a></div>
         </form>
     </div>
