--- a/static/scss/_global.scss
+++ b/static/scss/_global.scss
@@ -1,3 +1,4 @@
+/* global */
 .float-cont:before,
 .float-cont:after {
   content: " ";
@@ -21,12 +22,34 @@
   display: none;
 }
 
+.w45 {
+  width: 45%;
+  padding-right: 4%;
+}
+.w47 {
+  width: 46.5%;
+}
 .w240 {
   width: 240px;
+}
+.w280 {
+  width: 280px;
+}
+.w440 {
+  width: 440px;
 }
 
 .mr0 {
   margin-right: 0 !important;
+}
+.mr5 {
+  margin-right: 5px;
+}
+.mb7 {
+  margin-bottom: 7px;
+}
+.mb11 {
+  margin-bottom: 11px;
 }
 .mr20 {
   margin-right: 20px;
@@ -39,6 +62,9 @@
 }
 .mb15 {
   margin-bottom: 15px;
+}
+.mb16 {
+  margin-bottom: 16px;
 }
 .mb20 {
   margin-bottom: 20px;
@@ -114,10 +140,6 @@ a.dashed {
     background: url(../images/ico/orange-file.png) 0 0 no-repeat;
   }
 }
-
-.semibold {
-  font-family: 'opensanssemibold';
-}
 .helveticabold {
   font-family: 'helveticaneuecyrbold';
 }
@@ -139,6 +161,13 @@ h4.fs13, .fs13 {
 }
 .fs21 {
   font-size: 21px;
+}
+
+.lh13 {
+  line-height: 1.3em;
+}
+.lh40 {
+  line-height: 40px;
 }
 
 .def-color {
