--- a/static/scss/_reset.scss
+++ b/static/scss/_reset.scss
@@ -1,3 +1,4 @@
+/* reset */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, fieldset, form, label, table, tbody, tfoot, thead, tr, th, td {
   margin: 0;
   padding: 0;
