--- a/templates/includes/_catalog_quickview_layer.html
+++ b/templates/includes/_catalog_quickview_layer.html
@@ -35,7 +35,7 @@
             </div>
             <div>
                 <div class="linkcard-cont">
-                    <a href="" class="btn btn-buy btn-block">В корзину</a>
+                    <a href="" class="btn btn-buy btn_block">В корзину</a>
                     <a href="card.html" class="related-suggest">Карточка товара</a>
                 </div>
                 <a href="#layer-click" class="fancybox semibold lh40">Купить в 1 клик</a>
@@ -99,7 +99,7 @@
             </div>
             <div>
                 <div class="linkcard-cont">
-                    <a href="" class="btn btn-buy btn-block">В корзину</a>
+                    <a href="" class="btn btn-buy btn_block">В корзину</a>
                     <a href="card_complex.html" class="related-suggest">Карточка товара</a>
                 </div>
                 <a href="#layer-click" class="fancybox semibold lh40">Купить в 1 клик</a>
