--- a/static/scss/_favorite.scss
+++ b/static/scss/_favorite.scss
@@ -33,7 +33,7 @@
   display: inline-block;
   vertical-align: top;
   padding-left: 40px;
-  background: url(../images/ico/plus.png) 0 0 no-repeat;
+  background: url(../images/ico/orange-plus.png) 0 0 no-repeat;
   font-family: 'opensanssemibold';
   line-height: 30px;
 }
