--- a/static/scss/_filters.scss
+++ b/static/scss/_filters.scss
@@ -84,7 +84,7 @@ a.inner-border {
   width: 18px;
   height: 18px;
   position: absolute;
-  background: url(../images/ico/del.png) no-repeat;
+  background: url(../images/ico/blue-delete-small.png) no-repeat;
   cursor: pointer;
   right: 18px;
   top: 11px;
@@ -117,7 +117,7 @@ a.inner-border {
   margin-left: 15px;
 }
 .btn-reset {
-  background: url(../images/ico/reset.png) no-repeat;
+  background: url(../images/ico/close-black-small.png) no-repeat;
   padding-left: 16px;
   text-decoration: underline;
   font-size: 11px;
