--- a/static/scss/_popups.scss
+++ b/static/scss/_popups.scss
@@ -18,7 +18,7 @@
 .popup-close {
   width: 14px;
   height: 15px;
-  background: url(../images/ico/close.png) no-repeat;
+  background: url(../images/ico/close-blue.png) no-repeat;
   cursor: pointer;
   right: 13px;
   top: 13px;
