--- a/static/scss/_tags.scss
+++ b/static/scss/_tags.scss
@@ -37,7 +37,7 @@ a.tag {
   vertical-align: middle;
   width: 14px;
   height: 15px;
-  background: url(../images/ico/remove.png) no-repeat;
+  background: url(../images/ico/close.png) no-repeat;
   cursor: pointer;
   margin-left: 17px;
 
