--- a/templates/includes/_card_service.html
+++ b/templates/includes/_card_service.html
@@ -4,18 +4,18 @@
         <div class="fs11-grey">при заказе от 999 руб!</div>
     </div>
     <a href="#layer-addfav" class="fancybox card-service-item">
-        <img src="static/images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span>
+        <img src="static/images/ico/orange-favorite.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span>
         <span class="card-service-tip">Создайте список избранных товаров, чтобы не терять их!</span>
     </a>
     <a href="" class="card-service-item">
-        <img src="static/images/ico/share.png" class="card-service-ico"/><span class="card-service-txt">Поделиться</span>
+        <img src="static/images/ico/orange-share.png" class="card-service-ico"/><span class="card-service-txt">Поделиться</span>
         <span class="card-service-tip" style="width: 80px; left: -70px;">Поделиться:<br/>
-            <span class="round-bg"><img alt="" src="static/images/ico/vk1.png"></span>
-            <span class="round-bg"><img alt="" src="static/images/ico/od1.png"></span>
+            <span class="round-bg"><img alt="" src="static/images/ico/white-vk-small.png"></span>
+            <span class="round-bg"><img alt="" src="static/images/ico/white-od-small.png"></span>
         </span>
     </a>
     <a href="" class="card-service-item">
-        <img src="static/images/ico/chat.png" class="card-service-ico"/><span class="card-service-txt">Чат с менеджером</span>
+        <img src="static/images/ico/orange-chat.png" class="card-service-ico"/><span class="card-service-txt">Чат с менеджером</span>
         <span class="card-service-tip">Квалифицированные менеджеры ответят<br/>на ваши вопросы</span>
     </a>
 </div>
