--- a/templates/includes/_catalog_quickview_layer.html
+++ b/templates/includes/_catalog_quickview_layer.html
@@ -1,49 +1,3 @@
-<!-- <div class="layer" id="layer-quickview1">
-    <div class="p20 qv-layer float-cont">
-        <div class="card-photo-block">
-            <div class="bxslider-photo-border">
-                <div class="bxslider-photo no-zoom">
-                    <a class="photo-slide"><img src="static/images/upload/p11.jpg" alt=""/></a>
-                    <a class="photo-slide"><img src="static/images/upload/p12.jpg" alt=""/></a>
-                    <a class="photo-slide"><img src="static/images/upload/p11.jpg" alt=""/></a>
-                    <a class="photo-slide"><img src="static/images/upload/p12.jpg" alt=""/></a>
-                    <a class="photo-slide"><img src="static/images/upload/p13.jpg" alt=""/></a>
-                </div>
-                <div class="bx-arrow-left"></div>
-                <div class="bx-arrow-right"></div>
-            </div>
-            <a href="#layer-addfav" class="fancybox card-service-item">
-                <img src="static/images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span>
-            </a>
-        </div>
-        <div class="card-desc">
-            <h1>Royal Canin Maxi Junior Канин для молодых собак крупных пород 4 кг</h1>
-            <div class="card-code">Код товара: 12778</div>
-            <input type="hidden" class="prod-price-actual" value="540"/>
-            <div class="card-price-cont">
-                <div class="card-price">540 Р</div>
-                <div class="marker-avaliable">В наличии</div>
-            
-                <div class="card-price-old">640 Р</div>
-            </div>
-            <div class="card-short-desc">Корм для щенков с с высоким содержанием животного протеина и малым количеством углеводов.</div>
-            <div class="card-count">
-                Количество <span class="count-dec"></span><input type="text" class="card-count-input" value="1"/><span class="count-inc"></span>
-            </div>
-            <div class="card-total">
-                Цена: <span class="total-value">1080</span> руб  <span class="total-desc">(540 х <span class="counter-value">2</span>)</span>
-            </div>
-            <div>
-                <div class="linkcard-cont">
-                    <a href="" class="btn btn-buy btn_block">В корзину</a>
-                    <a href="card.html" class="related-suggest">Карточка товара</a>
-                </div>
-                <a href="#layer-click" class="fancybox semibold lh40">Купить в 1 клик</a>
-            </div>
-        </div>
-    </div>
-</div> -->
-
 <div class="layer" id="layer-quickview1">
     <div class="p20 qv-layer float-cont">
         <div class="card-photo-block">
@@ -59,7 +13,7 @@
                 <div class="bx-arrow-right"></div>
             </div>
             <a href="#layer-addfav" class="fancybox card-service-item">
-                <img src="static/images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span>
+                <img src="static/images/ico/orange-favorite.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span>
             </a>
         </div>
         <div class="card-desc">
