--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -20,10 +20,10 @@
             </form>
             <div class="delivery-note">Полезная рассылка<br/>2 раза в месяц</div>
             <div class="float-cont">
-                <a href="" class="soc-ico"><img src="static/images/ico/vk.png" alt=""/></a>
-                <a href="" class="soc-ico"><img src="static/images/ico/tw.png" alt=""/></a>
-                <a href="" class="soc-ico"><img src="static/images/ico/od.png" alt=""/></a>
-                <a href="" class="soc-ico mr0"><img src="static/images/ico/fb.png" alt=""/></a>
+                <a href="" class="soc-ico"><img src="static/images/ico/white-vk.png" alt=""/></a>
+                <a href="" class="soc-ico"><img src="static/images/ico/white-tw.png" alt=""/></a>
+                <a href="" class="soc-ico"><img src="static/images/ico/white-od.png" alt=""/></a>
+                <a href="" class="soc-ico mr0"><img src="static/images/ico/white-fb.png" alt=""/></a>
             </div>
         </div>
         <div class="f-menu">
@@ -55,12 +55,12 @@
             <ul>
                 <li><a href=""><img src="static/images/ico/dog.png" alt="" class="link-ico"/>Собаки</a>
                 </li>
-                <li><a href=""><img src="static/images/ico/cat.png" alt="" class="link-ico"/>Кошки</a></li>
-                <li><a href=""><img src="static/images/ico/rodent.png" alt="" class="link-ico"/>Грызуны</a></li>
-                <li><a href=""><img src="static/images/ico/fish.png" alt="" class="link-ico"/>Рыбки</a></li>
-                <li><a href=""><img src="static/images/ico/bird.png" alt="" class="link-ico"/>Птицы</a></li>
-                <li><a href=""><img src="static/images/ico/reptile.png" alt="" class="link-ico"/>Рептилии</a></li>
-                <li><a href=""><img src="static/images/ico/host.png" alt="" class="link-ico"/>Для хозяев</a></li>
+                <li><a href=""><img src="static/images/ico/orange-cat.png" alt="" class="link-ico"/>Кошки</a></li>
+                <li><a href=""><img src="static/images/ico/orange-rodent.png" alt="" class="link-ico"/>Грызуны</a></li>
+                <li><a href=""><img src="static/images/ico/orange-fish.png" alt="" class="link-ico"/>Рыбки</a></li>
+                <li><a href=""><img src="static/images/ico/orange-bird.png" alt="" class="link-ico"/>Птицы</a></li>
+                <li><a href=""><img src="static/images/ico/orange-reptile.png" alt="" class="link-ico"/>Рептилии</a></li>
+                <li><a href=""><img src="static/images/ico/orange-host.png" alt="" class="link-ico"/>Для хозяев</a></li>
             </ul>
         </div>
         <div class="f-contacts">
@@ -68,7 +68,7 @@
             <div class="ph">+7(495)111-11-11</div>
             <div class="mb20 fs13"><a href="mailto:shop@teenyweeny.ru">shop@teenyweeny.ru</a></div>
             <div class="mb20"><a href=""><img src="static/images/upload/ya.png" alt="" class="img-block"/></a></div>
-            <div><img src="static/images/ico/pay-img.png" alt=""/></div>
+            <div><img src="static/images/ico/cards-small.png" alt=""/></div>
         </div>
     </div>
 </div>
