--- a/templates/includes/_header_login.html
+++ b/templates/includes/_header_login.html
@@ -49,7 +49,7 @@
                 <form class="search-block">
                     <input type="text" class="search-input" placeholder="Найти в каталоге" />
                     <input type="submit" class="search-sub" value=""/>
-                    <div class="tip">Например, <a href="">Royal Canin Urban Life</a></div>
+                    <div class="hint">Например, <a href="">Royal Canin Urban Life</a></div>
                 </form>
                 <div class="shop-block">
                     <div class="float-cont login-block">
@@ -68,7 +68,7 @@
                     </div>
                     <div class="shop-cart float-cont">
                         <div class="fleft">
-                            <img src="static/images/upload/cart.png" alt="" class="shop-cart-img"/>
+                            <img src="static/images/upload/orange-cart.png" alt="" class="shop-cart-img"/>
                             <div class="price-cont">
                                 <div class="price">13 890 Р</div>
                                 <div class="fs11">В корзину</div>
