--- a/templates/includes/_log_reg_layers.html
+++ b/templates/includes/_log_reg_layers.html
@@ -46,9 +46,9 @@
         </div>
         <div class="text-center soc-login">
             <div class="fs11">Войти как пользователь:</div>
-            <a href="" class="soc-ico1"><img src="images/ico/vk2.png"/></a>
-            <a href="" class="soc-ico1"><img src="images/ico/fb2.png"/></a>
-            <a href="" class="soc-ico1"><img src="images/ico/g+.png"/></a>
+            <a href="" class="soc-ico1"><img src="images/ico/orange-vk.png"/></a>
+            <a href="" class="soc-ico1"><img src="images/ico/orange-fb.png"/></a>
+            <a href="" class="soc-ico1"><img src="images/ico/orange-g+.png"/></a>
         </div>
     </div>
 </div>
@@ -83,9 +83,9 @@
         </div>
         <div class="text-center soc-login">
             <div class="fs11">Войти как пользователь:</div>
-            <a href="" class="soc-ico1"><img src="images/ico/vk2.png"/></a>
-            <a href="" class="soc-ico1"><img src="images/ico/fb2.png"/></a>
-            <a href="" class="soc-ico1"><img src="images/ico/g+.png"/></a>
+            <a href="" class="soc-ico1"><img src="images/ico/orange-vk.png"/></a>
+            <a href="" class="soc-ico1"><img src="images/ico/orange-fb.png"/></a>
+            <a href="" class="soc-ico1"><img src="images/ico/orange-g+.png"/></a>
         </div>
     </div>
 </div>
