--- a/templates/index_login.html
+++ b/templates/index_login.html
@@ -242,7 +242,7 @@
 	<div class="float-cont">
 		<div class="fleft big-section">
 			<div class="section-title">
-				<span class="section-title-txt">Все для</span><img src="static/images/ico/dog1.png" alt="" class="title-ico"/><span class="section-title-txt right">собак</span>
+				<span class="section-title-txt">Все для</span><img src="static/images/ico/title-dog-big.png" alt="" class="title-ico"/><span class="section-title-txt right">собак</span>
 			</div>
 			
 			<div class="section-body" style="background-image: url(static/images/pic/dog.jpg);">
@@ -275,7 +275,7 @@
 
 		<div class="fright big-section">
 			<div class="section-title">
-				<span class="section-title-txt">Все для</span><img src="static/images/ico/cat1.png" alt="" class="title-ico"/><span class="section-title-txt right">кошек</span>
+				<span class="section-title-txt">Все для</span><img src="static/images/ico/title-cat-big.png" alt="" class="title-ico"/><span class="section-title-txt right">кошек</span>
 			</div>
 			
 			<div class="section-body" style="background-image: url(static/images/pic/cat.jpg);">
@@ -308,7 +308,7 @@
 
 		<div class="fleft small-section">
 			<div class="section-title">
-				<span class="section-title-txt">Все для</span><img src="static/images/ico/rodent1.png" alt="" class="title-ico"/><span class="section-title-txt right">грызунов</span>
+				<span class="section-title-txt">Все для</span><img src="static/images/ico/title-rodent.png" alt="" class="title-ico"/><span class="section-title-txt right">грызунов</span>
 			</div>
 			
 			<div class="section-body" style="background-image: url(static/images/pic/rodent.jpg);">
@@ -327,7 +327,7 @@
 
 		<div class="fleft small-section">
 			<div class="section-title">
-				<span class="section-title-txt">Все для</span><img src="static/images/ico/fish1.png" alt="" class="title-ico"/><span class="section-title-txt right">рыбок</span>
+				<span class="section-title-txt">Все для</span><img src="static/images/ico/title-fish.png" alt="" class="title-ico"/><span class="section-title-txt right">рыбок</span>
 			</div>
 			
 			<div class="section-body" style="background-image: url(static/images/pic/fish.jpg);">
@@ -346,7 +346,7 @@
 
 		<div class="fleft small-section">
 			<div class="section-title">
-				<span class="section-title-txt">Все для</span><img src="static/images/ico/bird1.png" alt="" class="title-ico"/><span class="section-title-txt right">птиц</span>
+				<span class="section-title-txt">Все для</span><img src="static/images/ico/title-bird.png" alt="" class="title-ico"/><span class="section-title-txt right">птиц</span>
 			</div>
 			
 			<div class="section-body" style="background-image: url(static/images/pic/bird.jpg);">
@@ -365,7 +365,7 @@
 
 		<div class="fright small-section">
 			<div class="section-title">
-				<span class="section-title-txt">Все для</span><img src="static/images/ico/reptile1.png" alt="" class="title-ico"/><span class="section-title-txt right">рептилий</span>
+				<span class="section-title-txt">Все для</span><img src="static/images/ico/title-reptile.png" alt="" class="title-ico"/><span class="section-title-txt right">рептилий</span>
 			</div>
 			
 			<div class="section-body" style="background-image: url(static/images/pic/reptile.jpg);">
