--- a/static/scss/_article.scss
+++ b/static/scss/_article.scss
@@ -9,11 +9,16 @@
 }
 .article_image {
   float: left;
-  @include size(380px,160px);
+  width: 380px;
   margin-right: 30px;
   padding: 0 20px 20px 0;
   background-color: $color-white;
   overflow: hidden;
+
+  img {
+    display: block;
+    width: 100%;
+  }
 }
 .article_text {
   margin-bottom: 50px;
