--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -49,13 +49,13 @@
                 <form class="search-block">
                     <input type="text" class="search-input" placeholder="Найти в каталоге" />
                     <input type="submit" class="search-sub" value=""/>
-                    <div class="tip">Например, <a href="">Royal Canin Urban Life</a></div>
+                    <div class="hint">Например, <a href="">Royal Canin Urban Life</a></div>
                 </form>
                 <div class="shop-block">
                     <div class="cab-link"><a href="">Личный кабинет</a></div>
                     <div class="shop-cart float-cont">
                         <div class="fleft">
-                            <img src="static/images/ico/cart.png" alt="" class="shop-cart-img"/>
+                            <img src="static/images/ico/orange-cart.png" alt="" class="shop-cart-img"/>
                             <div class="price-cont">
                                 <div class="price">13 890 Р</div>
                                 <div class="fs11">В корзину</div>
